--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=DefendFromTimmies
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DefendFromTimmyMap.DefendFromTimmyMap
+EditorStartupMap=/Game/Maps/DFT_Terrain.DFT_Terrain
 GameDefaultMap=/Game/Maps/DefendFromTimmyMap_WaitingArea.DefendFromTimmyMap_WaitingArea
 TransitionMap=
 bUseSplitscreen=True
