--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,9 @@ r.SkinCache.CompileShaders=False
 
 r.RayTracing=True
 r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.AutoExposure.Bias=5.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
